feat: menubar updated

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,36 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.menubar {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  background-color: #FFFFFF;
+}
+
+.menubar .icon {
+  padding: 5%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+}
+
+.menubar>.link {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+.menubar .icon:hover {
+  border-top: 3px solid black;
+}
+
+.menubar .icon:active {
+  border-top: 3px solid black;
 }
