--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,50 @@ body {
 .menubar .icon:active {
   border-top: 3px solid black;
 }
+
+.profile {
+  background-color: #7052FF;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  padding: 0% 4%;
+  position: relative;
+}
+
+.card {
+  background-color: white;
+  color: black;
+  border-radius: 10px 10px 0px 0px;
+  margin-top: 37%;
+}
+
+#profileImg {
+  width: 30%;
+  position: absolute;
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 0px 3px 2px #757575;
+  margin: auto;
+  bottom: 22%;
+  border-width: 10%;
+  left: 34%;
+}
+
+.card>h2 {
+  padding-top: 15%;
+  color: #2e2e2e;
+}
+
+#loadingDiv {
+  display: flex;
+  justify-content: center;
+  height: 90vh;
+  align-items: center;
+}
+
+#loadingDiv>img {
+  width: 10%;
+  margin: auto;
+}
