--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 .menubar {
   width: 100%;
   position: fixed;
+  z-index: 100;
   bottom: 0;
   display: flex;
   justify-content: space-between;
@@ -60,9 +61,10 @@ body {
   position: absolute;
   border: 3px solid white;
   border-radius: 50%;
+  background-color: white;
   box-shadow: 0px 3px 2px #757575;
   margin: auto;
-  bottom: 22%;
+  top: 135px;
   border-width: 10%;
   left: 34%;
 }
@@ -82,4 +84,76 @@ body {
 #loadingDiv>img {
   width: 10%;
   margin: auto;
+}
+
+.userData {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 5%;
+  padding: 3% 3%;
+  gap: 3%;
+}
+
+.userData>div {
+  border-radius: 10px;
+  background-color: #7052FF;
+  color: white;
+  width: 100%;
+}
+
+.userData>div>p:nth-child(1) {
+  font-size: 20px;
+  font-weight: 500;
+  margin: 10%;
+}
+
+.userData>div>p:nth-child(2) {
+  font-size: 12px;
+  font-weight: 300;
+  margin: 10%;
+}
+
+.subMenu {
+  display: flex;
+  text-align: center;
+  gap: 2%;
+}
+
+.subMenu>div {
+  width: 100%;
+}
+
+.subMenu>div>p {
+  font-weight: 500;
+}
+
+.badgeWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.badgeWrapper>div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10%;
+}
+
+.badgeWrapper>div>div {
+  width: 100%;
+}
+
+.badgeWrapper>div>div>img {
+  width: 100%;
+}
+
+.pointsRow {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #b1a1ff;
+}
+
+.pointsRow>p {
+  padding: 5%;
 }
