--- a/src/index.css
+++ b/src/index.css
@@ -18,21 +18,16 @@ body {
 }
 
 .menubar .icon {
-  padding: 20% 0%;
   color: black;
   text-align: center;
   text-decoration: none;
+  margin: auto;
 }
 
-.menubar>.link,
-.menubar>.link1 {
+.menubar>.link {
   width: 100%;
   margin: auto;
   text-align: center;
-}
-
-.link1>.icon {
-  border-top: 3px solid black;
 }
 
 .profile {
@@ -45,6 +40,12 @@ body {
   padding: 0% 4%;
   position: relative;
   min-height: 90vh;
+}
+
+.profile>h2 {
+  font-weight: 500;
+  font-size: x-large;
+  padding-top: 5%;
 }
 
 .card {
@@ -62,14 +63,16 @@ body {
   background-color: white;
   box-shadow: 0px 3px 2px #757575;
   margin: auto;
-  top: 135px;
+  top: 13%;
   border-width: 10%;
   left: 34%;
 }
 
-.card>h2 {
+#name {
   padding-top: 15%;
   color: #2e2e2e;
+  font-size: x-large;
+  font-weight: 500;
 }
 
 #loadingDiv {
@@ -124,6 +127,7 @@ body {
 
 .subMenu>div>p {
   font-weight: 500;
+  padding: 8%;
 }
 
 .badgeWrapper {
@@ -146,4 +150,25 @@ body {
 
 .pointsRow>p {
   padding: 5%;
+}
+
+.modalDiv {
+  width: 100%;
+  margin: auto;
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.modalDiv>img {
+  margin: auto;
+  width: 30%;
+}
+
+.modalDiv>h2 {
+  text-align: center;
+  font-size: x-large;
+  font-weight: 600;
 }
